Controller CRUD operations for ContactPerson and more.
We now support listing of all contact persons and individual ones, the creation of contact persons and their updates. ContactPerson instances are held in their own repository to be able to be managed and later assigned to encounters (still TODO).

Rough model details for diary and diary entries.

Changes in property names:

- surename -> lastName
- firstname -> firstName
- lastname -> lastName
- mobilephone -> mobilePhone

Also fixed the spelling of questionnaire in URIs.

/api/enrollment now contains hyperlinks to all already available states within the enrollment process plus a next link to point to the next step in the process.

Enrollment questionnaire now only supports PUT for updates as that's what's semantically correct.

Create dedicated type for errors representation for reuse between different controllers.